--- a/src/css/account_form.css
+++ b/src/css/account_form.css
@@ -19,20 +19,23 @@
       margin-bottom: 8px;
       text-indent: 5px;
     }
-    input {
+    .form__input {
       width: 100%;
       height: 40px;
       border: 0;
       border-bottom: 1px solid var(--gray-300);
       background: none;
+      padding: 10px;
       font-size: 16px;
       font-weight: 400;
       color: var(--Black);
       line-height: 40px;
-      text-indent: 5px;
       appearance: none;
       &[type='password']{
         padding-right: 40px;
+      }
+      &.form__err{
+        border-bottom: 2px solid var(--red-500);
       }
       & ~ .button__visible {
         position: absolute;
@@ -42,6 +45,11 @@
         height: 40px;
         transform: translateY(-50%);
       }
+    }
+    .text__err{
+      margin: -10px 0 20px;
+      font-size: 14px;
+      color: var(--red-500);
     }
     .button__signup,
     .button__login {
@@ -60,18 +68,6 @@
       border-radius: 8px;
       background-color: var(--gray-300);
       color: #000;
-    }
-  }
-}
-
-:root[data-theme="dark"] {
-  .box__signup-container,
-  .box__login-container {
-    input {
-      &:-webkit-autofill,
-      &:-webkit-autofill:focus {
-        color-scheme: dark;
-      }
     }
   }
 }
