--- a/src/css/detail_pages.css
+++ b/src/css/detail_pages.css
@@ -1,45 +1,55 @@
-.detail__container {
-  margin: 0 auto;
-  padding: 20px;
+.box__detail {
   max-width: 860px;
   height: 100vh;
-}
-
-.detail__back {
-  background: none;
-  border: none;
-  font-size: 16px;
-  color: var(--gray-600);
-  margin-bottom: 16px;
-  cursor: pointer;
-}
-
-.detail__image-wrapper {
-  width: 100%;
-  border-radius: 12px;
-  overflow: hidden;
-  margin-bottom: 20px;
-}
-
-.detail__image {
-  width: 100%;
-  height: auto;
-  display: block;
-  object-fit: cover;
-}
-
-.detail__title {
-  font-size: 22px;
-  font-weight: bold;
-  margin-bottom: 12px;
-  line-height: 1.4;
-}
-
-.detail__content {
-  font-size: 16px;
-  line-height: 1.7;
-  color: var(--gray-600);
-  white-space: pre-wrap;
+  margin: 0 auto;
+  padding: 20px;
+  .box__image {
+    width: 100%;
+    margin-bottom: 20px;
+    border-radius: 12px;
+    overflow: hidden;
+    .image {
+      display: block;
+      width: 100%;
+      min-height: 147px;
+      height: auto;
+      object-fit: cover;
+    }
+  }
+  .box__contents {
+    display: flex;
+    flex-direction: column;
+    align-items: end;
+    .text__title {
+      font-size: 22px;
+      font-weight: bold;
+      margin-bottom: 12px;
+      line-height: 1.4;
+    }
+    .text__contents{
+      margin-bottom: 10px;
+      font-size: 16px;
+      color: var(--gray-600);
+      line-height: 1.7;
+      white-space: pre-wrap;
+    }
+    .link__article{
+      display: inline-block;
+      width: max-content;
+      padding: 10px 20px;
+      font-size: 13px;
+      line-height: 16px;
+      vertical-align: top;
+      box-sizing: border-box;
+      .icon__go{
+        display: inline-block;
+        width: 16px;
+        height: 16px;
+        margin-left: 5px;
+        vertical-align: top;
+      }
+    }
+  }
 }
 
 /* 모바일 최적화 */
