--- a/src/index.css
+++ b/src/index.css
@@ -52,6 +52,8 @@ main {
           overflow: hidden;
           .image {
             width: 100%;
+            height: 100%;
+            object-fit: cover;
           }
         }
       }
