--- a/src/css/mypage.css
+++ b/src/css/mypage.css
@@ -10,6 +10,23 @@
       line-height: 42px;
     }
   }
+  .box__select-category{
+    display: grid;
+    padding: 20px;
+    gap: 10px;
+    grid-template-columns: 1fr 1fr;
+    .form__checkbox{
+      width: 16px;
+      height: 16px;
+    }
+    .text{
+      display: inline-block;
+      padding-left: 5px;
+      font-size: 16px;
+      line-height: 1;
+      vertical-align: top;
+    }
+  }
   .list__mypage {
     padding: 6px 25px 30px;
     .list-item {
@@ -30,7 +47,7 @@
         cursor: pointer;
         text-align: left;
         .text {
-          font-size: 14px;
+          font-size: 16px;
           line-height: 36px;
         }
         .image {
